plugins {
	id 'java'
	id 'org.springframework.boot' version '3.1.2'
	id 'io.spring.dependency-management' version '1.1.2'
	id "io.spring.javaformat" version "0.0.34"
}

group = 'com.assessment'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '17'
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	compileOnly "io.spring.javaformat:spring-javaformat-gradle-plugin:0.0.34"
	annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
}

test {
	useJUnitPlatform() // Use JUnit 5 platform for running tests
	testLogging {
		events 'passed', 'skipped', 'failed' // Show only passed, skipped, and failed test events in the console output
	}
}

tasks.named('test') {
	useJUnitPlatform()
}
tasks.named('compileJava') {
	inputs.files(tasks.named('processResources'))
}

formatMain.mustRunAfter(checkFormatMain)
processTestResources.mustRunAfter(formatTest)
compileJava.dependsOn(formatMain)
classes.dependsOn(formatMain)
